fix: fixed layout bugs

--- a/source/sass/blocks/project-hero.scss
+++ b/source/sass/blocks/project-hero.scss
@@ -6,6 +6,10 @@
 	&__heading {
 		margin: 0 0 30px;
 	}
+	&__subtitle {
+		display: block;
+		margin: 7px 0 0;
+	}
 	&__head {
 		display: flex;
 		width: 100%;
@@ -123,6 +127,7 @@
 	}
 	&__next {
 		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
 		align-items: center;
 		background-color: $color-bunting;
@@ -140,7 +145,9 @@
 			margin: 0 0 auto;
 		}
 		.next-title {
-			flex: auto;
+			align-self: flex-end;
+			width: 100%;
+			text-align: center;
 			&__title {
 				display: block;
 				font-weight: 600;
