--- a/source/sass/blocks/similar-projects.scss
+++ b/source/sass/blocks/similar-projects.scss
@@ -6,7 +6,7 @@
 		justify-content: space-between;
 	}
 	&__slider {
-		height: 331px;
+		height: 240px;
 		&-btns {
 			position: relative;
 			width: 82px;
