--- a/source/sass/blocks/technic.scss
+++ b/source/sass/blocks/technic.scss
@@ -46,17 +46,31 @@
 			img {
 			}
 		}
-		&-btn {
-			margin: 0;
-			padding: 16px;
-			justify-content: center;
+		&-nav {
+			width: 100%;
+			height: 52px;
+			position: absolute;
 			top: auto;
 			bottom: 50px;
+			z-index: 5;
+			display: flex;
+			align-items: center;
+		}
+		&-btn {
+			position: initial;
+			transform: none;
+			margin: 0;
+			padding: 16px 16px 16px 48px;
+			justify-content: center;
 			border-radius: 5px;
-			min-width: 52px;
+			width: 100%;
+			max-width: fit-content;
+			transition: padding $trans-600, background-color $trans-600, color $trans-600;
+			&--prev {
+				margin: 0 30px 0 0;
+			}
 			&--next {
-				left: 82px;
-				padding-left: 48px;
+
 			}
 			&-text {
 				display: block;
@@ -79,6 +93,9 @@
 				padding: 16px 8.5px;
 				.technic__slider-btn-text {
 					margin: 0;
+					max-width: 0;
+					font-size: 0;
+					transition: all $trans-default;
 				}
 				svg {
 					color: $color-logan;
