--- a/source/sass/blocks/video.scss
+++ b/source/sass/blocks/video.scss
@@ -12,17 +12,10 @@
 			position: relative;
 			border-radius: 5px;
 			overflow: hidden;
-			// &::after {
-			// 	content: "";
-			// 	position: absolute;
-			// 	top: 0;
-			// 	left: 0;
-			// 	bottom: 0;
-			// 	right: 0;
-			// 	background: linear-gradient(0deg, rgba(45, 49, 66, 0.1), rgba(45, 49, 66, 0.1));
-			// 	z-index: 0;
-			// }
+			width: 100%;
+			height: 340px;
 			&-btn {
+				margin: 0;
 				position: absolute;
 				top: 50%;
 				right: 50%;
@@ -46,8 +39,11 @@
 				}
 			}
 			video {
-
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
 			}
 		}
 	}
 }
+
